# brave-core

./: BUILD.gn  Jenkinsfile  package-lock.json  package.json
.github/: CODEOWNERS
.storybook/: BUILD.gn  locale.ts
android/: brave_java_resources.gni
android/java/: AndroidManifest.xml
app/: DEPS  brave_command_ids.h  brave_generated_resources.grd  brave_main_delegate.cc  brave_main_delegate_browsertest.cc  brave_settings_strings.grdp
browser/: about_flags.cc  brave_browser_process.h  brave_browser_process_impl.cc  brave_browser_process_impl.h  brave_content_browser_client.cc  brave_profile_prefs.cc  sources.gni
browser/brave_ads/: DEPS  ads_service_browsertest.cc  ads_service_factory.cc  ads_service_impl.cc  ads_service_impl.h  request_ads_enabled_api_browsertest.cc  sources.gni
browser/brave_ads/device_id/: BUILD.gn  DEPS  device_id_impl.cc  device_id_impl.h  device_id_impl_linux.cc  device_id_impl_mac.cc  device_id_impl_win.cc
browser/brave_rewards/: rewards_panel_service.h  rewards_panel_service_factory.h  rewards_tab_helper.cc  rewards_tab_helper.h
browser/brave_shields/: ad_block_service_browsertest.cc
browser/tor/: BUILD.gn
common/: brave_switches.cc  brave_switches.h  webui_url_constants.cc  webui_url_constants.h
components/brave_rewards/resources/rewards_panel/: BUILD.gn
components/brave_rewards/resources/rewards_panel/lib/: bubble_events.ts  extension_host.ts
components/playlist/renderer/: BUILD.gn  playlist_js_handler.cc  playlist_js_handler.h  playlist_js_render_frame_observer.cc  playlist_js_render_frame_observer.h
ios/: BUILD.gn
patches/: chrome-browser-resources-tools-optimize_webui.py.patch  testing-scripts-run_performance_tests.py.patch  tools-perf-benchmarks-loading.py.patch  tools-perf-cli_tools-update_wpr-update_wpr.py.patch  tools-perf-core-perf_benchmark.py.patch  tools-perf-core-results_dashboard.py.patch  tools-perf-page_sets-data-loading_desktop.json.patch  tools-perf-page_sets-data-system_health_desktop.json.patch  tools-perf-page_sets-loading_desktop.py.patch  tools-perf-process_perf_results.py.patch
renderer/: BUILD.gn  brave_content_renderer_client.cc  sources.gni
resources/: resource_ids.spec
script/: brave_license_helper.py
test/: BUILD.gn
(+419 files in other folders)
