# Copyright (c) 2022 The Brave Authors. All rights reserved.
# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this file,
# You can obtain one at http://mozilla.org/MPL/2.0/.

import("//build/config/features.gni")
import("//rlz/buildflags/buildflags.gni")

source_set("device_id") {
  sources = [
    "device_id_impl.cc",
    "device_id_impl.h",
  ]
  if (is_linux) {
    sources += [ "device_id_impl_linux.cc" ]
  } else if (is_mac) {
    sources += [ "device_id_impl_mac.cc" ]
  } else if (is_win) {
    sources += [ "device_id_impl_win.cc" ]
  }

  deps = [
    "//base",
    "//brave/components/brave_ads/browser",
    "//content/public/browser",
    "//crypto",
    "//rlz/buildflags",
  ]
  if (enable_rlz_support) {
    deps += [ "//rlz:rlz_lib" ]
  }

  libs = []
  if (is_win) {
    libs += [ "iphlpapi.lib" ]
  }
}
