import("//brave/components/common/typescript.gni")

transpile_web_ui("brave_rewards_panel") {
  entry_points = [ [
        "brave_rewards_panel",
        rebase_path("main.tsx"),
      ] ]
  resource_name = "brave_rewards_panel"
}

pack_web_resources("brave_rewards_panel_generated") {
  resource_name = "brave_rewards_panel"
  output_dir = "$root_gen_dir/brave/components/brave_rewards/resources"
  deps = [ ":brave_rewards_panel" ]
}
